CHANGELOG

2014-07-26: Remove dependency on ActionBarSherlock.

AppCompat.Dark theme generated using:
http://jgilfelt.github.io/android-actionbarstylegenerator/#name=Appcompatdark&compat=appcompat&theme=dark&actionbarstyle=transparent&texture=0&hairline=0&neutralPressed=1&backColor=2D2D2D%2C100&secondaryColor=151515%2C100&tabColor=33B5E5%2C100&tertiaryColor=303030%2C100&accentColor=33B5E5%2C100&cabBackColor=002E3E%2C100&cabHighlightColor=33B5E5%2C100

2014-07-21: Link hand and foot words; improve Shakespeare entries; added lyrics for {yIH bom}.
2014-07-15: Try to work around a bug where the action bar sometimes disappears.
2014-06-14: Minor edits to database.
2014-04-29: Better integration with TTS.
2014-04-16: Add Text-To_Speech ability (requires TTS engine which supports Klingon).

2014-04-11: Split into backport (Honeycomb and below) and regular versions again (Android version 4+/API 14+).

2014-04-10: Current installs by Android version

API
19  Android 4.4              618   10.77%  KitKat
18  Android 4.3            1,024   17.85%  J
17  Android 4.2              601   10.48%  J
16  Android 4.1            1,435   25.02%  Jelly Bean
15  Android 4.0.3 - 4.0.4    878   15.31%  Ice Cream Sandwich
--
13  Android 3.2               30    0.52%  H
12  Android 3.1                9    0.16%  Honeycomb
10  Android 2.3.3 - 2.3.7    971   16.93%  Gingerbread
 8  Android 2.2              132    2.30%  Froyo
 7  Android 2.1               31    0.54%  Eclair
    Others                     7    0.12%

2014-04-10: Remove tutorial and Google Play Services. Size increase was unacceptable.
APK size...
Before any changes:          1329806
After adding ShowcaseView:   2526186 (+1.2M)
Adding Google Play Services: 3472526 (+950k)
           or Froyo version: 2885537 (+360k)

2014-04-08: Added a tutorial.
2014-04-06: Added "Request translation" menu item, re-arranged menus, updated icons.
2014-03-31: Fixed some sources.
2014-03-05: Miscellaneous minor edits.